# monolith

./: .cvsignore  .gitignore  AUTHORS  BUGS  COPYING  INSTALL  Makefile.am  README  acconfig.h  aclocal.m4  build-defs.h.in  config.h.in  configure  configure.in  index.html  make_message_dirs  mkversion-sh  params.json
auto/: config.guess
cgi/: Makefile.in  account.c  counter.c  hprintf.c  index.c  interface.c  knownrooms.c  profile.c  register.c  userlist.c  util.c  wholist.c  www_auth_group.c  www_auth_user.c
daemons/: .cvsignore  Makefile.am  front.c  server.c
doc/: IDEAS  ISO-8859-1.faq  ISSUES  Makefile.am  README.web  THANKS  quadrants
doc/sql/: Makefile.am  config.sql  country.dat.bz2  country.sql  error.sql  express.sql  forum.sql  fqc.sql  goto.sql  login.sql  mail.sql  message-content.sql  message-index.sql  message.sql  online.sql  rating.sql  run  topic.sql  topics.sql  uqc.sql  user.sql  userforum.sql  usertopic.sql  useruser.sql  web-x.sql
icq/: .cvsignore  Makefile.am  icqlib.c
include/: .cvsignore  Makefile.am  bbsconfig.h  btmp.h  build-defs.h.in  cgi.h  chat.h  clipboard.h  commands.h  config.h  config.h.in  defs.h  dexi.h  dexi2.h  display_message.h  edit_message.h  enter_message.h  express.h  ext.h  extra.h  friends.h  front.h  fun.h  global.h  help.h  icq.h  icqlib.h  input.h  inter.h  key.h  libcache.h  libfriends.h  libmono.h  libquad.h  libshix.h  libuid.h  log.h  main.h  menu.h  messages.h  (+45 more)
intl/: Makefile.in
lib/: Makefile.am  btmp.c  libcache.c  libdexi.c  libfriends.c  libquad.c  libuid.c  log.c  msg_file.c  routines.c  sql_config.c  sql_convert.c  sql_express.c  sql_forum.c  sql_forumtopic.c  sql_goto.c  sql_llist.c  sql_login.c  sql_mail.c  sql_message.c  sql_online.c  sql_rating.c  sql_topic.c  sql_user.c  sql_userforum.c  sql_usertopic.c  sql_useruser.c  sql_utils.c  sql_web.c  sqlfile.c  userfile.c
misc/: .cvsignore  Makefile.am  add_quads.c  bbscheck.c  ccat.c  convert.c  delsql.c  dexi.c  dexi2.c  findlowest.c  finger.c  fsql.c  initconf.c  initdb.c  initgoto.c  makeemp.c  profile.c  purge.c  ql_sql.c  test.c  ubl.c  userlist.c  wholist.c
po/: .cvsignore  LINGUAS  Makevars  POTFILES.in  de.po  en.po  es.po  fr.po  nl.po
share/: Makefile.am  Makefile.in  country-init.sql
share/commandhelp/helpterm/: toggle_off  toggle_on
share/commandhelp/quadrant/: edit  index  invite  kickout  notebook  post  type
share/etc/: Makefile.am  chatfile  hosts  lockouts  shix.scores
share/feelings/: Makefile.am  feeling0  feeling1  feeling10  feeling11  feeling12  feeling13  feeling14  feeling15  feeling16  feeling17  feeling18  feeling19  feeling2  feeling20  feeling21  feeling22  feeling23  feeling24  feeling25  feeling26  feeling27  feeling28  feeling29  feeling3  feeling30  feeling4  feeling5  feeling6  feeling7  feeling8  feeling9
share/help/commands/: CLient  Config_Llama  Editor_post  Jump  K_unreadrooms  add_enemy  add_friend  add_quick_xfriend  address_change  again  alias  away  backwards  birthday  chatconf  chatmsg  chatwho  clear_enemies  clear_friends  clip  clipboard  co_all_logons  co_ansi  co_bold  co_disable_cmdlist  co_disx  co_expert  co_flash  co_frnd_notify  co_hidehost  co_hideinfo  co_interbbs  co_lastold  co_logon_event  co_pauseafter  co_promptafter  co_screenlen  co_shix  co_show_fr  co_showip  (+83 more)
share/loginscreens/: Makefile.am  hello5  newyear
share/menuhelp/: chatop  menu_admin  menu_clipboard  menu_commands  menu_config  menu_emp  menu_enemy  menu_feelings  menu_friend  menu_hide_info  menu_holodeck  menu_logout_help_argh_roulette  menu_main  menu_misc  menu_note  menu_read  menu_room  menu_user
share/messages/: change_pw  colortest  degraded  deleted_goodbye  entermsg  goodbye  guestmsg  mash  msg_delusrdeny  twituserdeny  unvalid  validation.txt  vote_info  yellmenu
share/newuser/: email  email_not_accepted  final  hideinfo  prohib  prohibemail  prohibnew  registration  welcome
shix/: Makefile.am  libshix.c  regerror.c  regexp.c  regsub.c
src/: .cvsignore  Makefile.am  banana.c  bbsconfig.c  chat.c  client_input.c  clipboard.c  commands.c  config.c  cprintf.c  display_message.c  edit_message.c  enter_message.c  express.c  friends.c  fun.c  help.bing  help.c  inter.c  key.c  main.c  menu.c  messages.c  msg_file.c  newuser.c  normal_input.c  qc.c  quadcont.c  read_menu.c  registration.c  rooms.c  routines2.c  statusbar.c  uadmin.c  usertools.c  vote.c  wholist.c
tools/: make_message_dirs  setup
web/: .cvsignore  .htaccess  Makefile.am  auth.inc  bbs.inc  config.inc.phtml  handler.phtml  image.phtml  index.phtml  new.phtml  pix.phtml  profile.phtml  read.phtml  sendx.phtml  test.phtml
web/classes/: Makefile.am  message.inc.phtml
web/engine/: Makefile.am  auth.inc.phtml  config.inc  config.inc.phtml  express.inc  express.inc.phtml  html.inc  html.inc.phtml  image.inc  list.inc  list.inc.phtml  post.inc  profile.inc  quad.inc  read.inc  routines.inc  routines.inc.phtml  who.inc
web/flash/: Makefile.am  mono.swf
web/pix/: Makefile.am  gif.php3  jpeg.php3  png.php3
web/script/: Makefile.am  global.js
web/sound/: .cvsignore  Makefile.am  error.aiff  error.au  message.aiff  ok.aiff  sorry.aiff  sure.aiff
web/style/: Makefile.am  global.css
