dnl Process this file with autoconf to produce a configure script.
dnl $Id$

AC_INIT(src/main.c)

AC_CANONICAL_SYSTEM

AM_INIT_AUTOMAKE(monolith, 1.0)
AM_CONFIG_HEADER(config.h)
AC_PREFIX_DEFAULT(/usr/bbs)

AC_ARG_WITH(name, [  --with-name=NAME        set the BBS name [default=none]],,with_name=none)
AC_ARG_WITH(mysql, [  --with-mysql[=DIR]      use mysql database system  [default=yes]
                          This option requires mysql to be installed.

    When --with-mysql is specified, you may also specify the following MySQL
    options, which the BBS will use to connect to the MySQL Server:],,with_mysql=yes)
AC_ARG_WITH(sql_host, [    --with-sql_host=HOST  Connect to this MySQL Server [default=localhost]],,with_sql_host=localhost)
AC_ARG_WITH(sql_user, [    --with-sql_user=USER  Connect using this MySQL username [default=bbs]],,with_sql_user=bbs)
AC_ARG_WITH(sql_pass, [    --with-sql_pass=PASS  Connect using this MySQL password [default=NULL]],,with_sql_pass=NULL)
AC_ARG_WITH(sql_db, [    --with-sql_db=DB      Use this MySQL database [default=bbs]],,with_sql_db=bbs)
AC_ARG_WITH(sql_sock, [    --with-sql_sock=SOCK  Connect via this socket [default=/tmp/mysql.sock]
                          
Additional --enable and --with options recognized:],,with_sql_sock=/tmp/mysql.sock)
AC_ARG_WITH(icq, [  --with-icq              use icq gateway system  [default=yes]
                          (allows bbs users to talk to icq users)],,with_icq=yes)
AC_ARG_WITH(rating, [  --with-rating           use message rating system  [default=no]
                          (allows users to rate messages)],,with_rating=no)
AC_ARG_WITH(hero, [  --with-hero             include superhero toy  [default=yes]
                          (requires silly sysops)],,with_hero=yes)
AC_ARG_WITH(overview, [  --with-overview         give overview after configuring  [default=no]],,with_overview=no)

if test "x$with_icq" != "xyes"; then
  with_icq=no
fi
if test "x$with_rating" != "xyes"; then
  with_rating=no
fi
if test "x$with_hero" != "xyes"; then
  with_hero=no
fi
if test "x$with_overview" != "xyes"; then
  with_overview=no
fi

umask 002

AC_SUBST(prefix)

dnl Checks for programs.
AC_PROG_AWK
AC_PROG_CC
AC_PROG_RANLIB
AC_PROG_INSTALL
AC_PROG_MAKE_SET
AC_PATH_PROG(SENDMAIL, sendmail, /usr/lib/sendmail, $PATH /usr/bin /usr/sbin /usr/etc /etc /usr/ucblib)
if test -n "$SENDMAIL"; then
  AC_DEFINE(HAVE_SENDMAIL)
fi
AC_SUBST(SENDMAIL)
AC_PATH_PROG(PROG_CAT, cat, /bin/cat, $PATH /usr/bin /usr/sbin /usr/etc /etc /usr/ucblib)
if test -n "$PROG_CAT"; then
  AC_DEFINE(HAVE_CAT)
fi
AC_SUBST(PROG_CAT)

dnl GNU gettext add-ons
ALL_LINGUAS="fr en nl de es"
AM_GNU_GETTEXT

dnl Check for awk/gawk - used to determine if we're linux or not.
AC_PATH_PROG(awk_path,awk,no)
AC_PATH_PROG(gawk_path,gawk,no)
AC_PATH_PROG(cat_path,cat,no)
AC_PATH_PROG(grep_path,grep,no)

dnl Checks for libraries.
dnl Replace `main' with a function in -lgdbm:
AC_CHECK_LIB(gdbm, gdbm_open)
AC_CHECK_LIB(crypt, crypt)
AC_CHECK_LIB(nsl, inet_ntoa)
AC_CHECK_LIB(socket, getpeername)

dnl Checks for header files.
AC_HEADER_DIRENT
AC_HEADER_STDC
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS(crypt.h fcntl.h sgtty.h sys/file.h sys/ioctl.h sys/time.h sys/utsname.h termio.h termios.h termbits.h asm/termbits.h unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_OFF_T
AC_TYPE_PID_T
AC_TYPE_SIZE_T
AC_HEADER_TIME
AC_STRUCT_TM

dnl Checks for library functions.
AC_PROG_GCC_TRADITIONAL
AC_TYPE_SIGNAL
AC_FUNC_VPRINTF
AC_FUNC_STRFTIME
AC_FUNC_MMAP
AC_CHECK_FUNCS(uname gettimeofday gethostname mkdir regcomp socket putenv strcspn strdup strspn strstr memfrob)

dnl check if MAP_FAILED is defined...
if test "x$grep_path" != "xno" ; then
  AC_CHECK_HEADERS(sys/mman.h)
  if test "x$ac_cv_header_sys_mman_h" != "xno" ; then
    AC_DEFINE(HAVE_SYS_MMAN_H)
    if test -r /usr/include/sys/mman.h; then
      echo -n "checking whether sys/mman.h defines MAP_FAILED..."
      result=`$grep_path MAP_FAILED /usr/include/sys/mman.h`
      if test "x$result" != "x"; then
        echo " yes"
        AC_DEFINE(HAVE_MAP_FAILED)
      else
        echo " no"
      fi
    fi
  fi
fi

dnl make sure a BBS name was specified.
dnl
echo -n "checking for BBS name..."
if test "x$with_name" = "xnone"; then
    echo
    echo " no name"
    echo
    echo "You MUST specify a name for your BBS. Use the --with-name=NAME option"
    echo "to specify it. For instance: --with-name=Monolith would cause your BBS"
    echo "to be called 'Monolith BBS'. (We'd prefer if you chose something else)"
    echo
    exit 0
else
    echo " $with_name BBS"
    BBSNAME="$with_name"
    AC_SUBST(BBSNAME)
fi

dnl Do a bit of mysql checking.
if test ! x${with_mysql} = x && test -d "${with_mysql}"; then
    echo "checking MySQL installation in ${with_mysql}..."
    mysql_dir=${with_mysql}
    echo -n "checking headers..."
    if test -d "${with_mysql}/include"; then
        MYSQL_INCLUDE="-I${with_mysql}/include"
        echo " ok"
    else
        echo " uh-oh"
    fi
    echo -n "checking libraries..."
    if test -d "${with_mysql}/lib"; then
        MYSQL_LIB="-L${with_mysql}/lib"
        echo " ok"
    else
        echo " uh-oh"
    fi
    echo -n "checking binaries..."
    if test -d "${with_mysql}/bin"; then
        MYSQL_BIN="${with_mysql}/bin"
        echo " ok"
    else
        echo " uh-oh"
    fi
    if test -f "${with_mysql}/include/mysql.h"; then
        MYSQL_HEADER="<mysql.h>"
        AC_SUBST(MYSQL_HEADER)
        AC_DEFINE(USE_MYSQL)
        AC_SUBST(MYSQL_INCLUDE)
        AC_SUBST(MYSQL_LIB)
        AC_SUBST(MYSQL_BIN)
        mysql_app=${MYSQL_BIN}/mysql
        FOUND_MYSQL=yes
    else
        echo
        echo "ARGH: Unable to locate mysql! Take cover! Self destructing in 3 seconds!"
        echo
        echo "Please install the MySQL database system, which is available for free from"
        echo "http://www.mysql.org/ and run this program again. If you do have MySQL in-"
        echo "stalled, use the option --with-mysql=DIR so that $0 can find it."
        echo
        exit 1
    fi
else
    dnl Look for global mysql installation.
    dnl
    AC_CHECK_HEADERS(mysql.h)
    if test "x$ac_cv_header_mysql_h" = "xno" ; then
        AC_CHECK_HEADERS(mysql/mysql.h)
        if test "x$ac_cv_header_mysql_mysql_h" = "xno" ; then

dnl No MySQL specified and not found in standard locations, nearly time to argh.
dnl
            echo
            echo "  Could not find MySQL and no directory was specified. I'm going to"
            echo "  have a little look around your system and check a few standard"
            echo "  locations, before I start running around in a panicking frenzy."
            echo
dnl ##
dnl ##
            if test ! x${with_mysql} = x; then
                if test -d "/opt/mysql"; then
                    echo "Found directory /opt/mysql"
                    echo "checking MySQL installation..."
                    mysql_dir=/opt/mysql
                    echo -n "checking headers..."
                    if test -d "${mysql_dir}/include"; then
                        MYSQL_INCLUDE="-I${mysql_dir}/include"
                        echo " ok"
                    else
                        echo " uh-oh"
                    fi
                    echo -n "checking libraries..."
                    if test -d "${mysql_dir}/lib"; then
                        MYSQL_LIB="-L${mysql_dir}/lib"
                        echo " ok"
                    else
                        echo " uh-oh"
                    fi
                    echo -n "checking binaries..."
                    if test -d "${mysql_dir}/bin"; then
                        MYSQL_BIN="${mysql_dir}/bin"
                        echo " ok"
                    else
                        echo " uh-oh"
                    fi
                    if test -f "${mysql_dir}/include/mysql.h"; then
                        MYSQL_HEADER="<mysql.h>"
                        AC_SUBST(MYSQL_HEADER)
                        AC_DEFINE(USE_MYSQL)
                        AC_SUBST(MYSQL_INCLUDE)
                        AC_SUBST(MYSQL_LIB)
                        AC_SUBST(MYSQL_BIN)
                        mysql_app=${MYSQL_BIN}/mysql
                        FOUND_MYSQL=yes
                    fi
                else
                    if ! test x${FOUND_MYSQL} = "xyes"; then
                        echo "no joy in /opt/mysql..."
                    fi
                fi
                if test -d "/usr/mysql"; then
                    echo "Found directory /usr/mysql"
                    echo "checking MySQL installation..."
                    mysql_dir=/usr/mysql
                    echo -n "checking headers..."
                    if test -d "${mysql_dir}/include"; then
                        MYSQL_INCLUDE="-I${mysql_dir}/include"
                        echo " ok"
                    else
                        echo " uh-oh"
                    fi
                    echo -n "checking libraries..."
                    if test -d "${mysql_dir}/lib"; then
                        MYSQL_LIB="-L${mysql_dir}/lib"
                        echo " ok"
                    else
                        echo " uh-oh"
                    fi
                    echo -n "checking binaries..."
                    if test -d "${mysql_dir}/bin"; then
                        MYSQL_BIN="${mysql_dir}/bin"
                        echo " ok"
                    else
                        echo " uh-oh"
                    fi
                    if test -f "${mysql_dir}/include/mysql.h"; then
                        MYSQL_HEADER="<mysql.h>"
                        AC_SUBST(MYSQL_HEADER)
                        AC_DEFINE(USE_MYSQL)
                        AC_SUBST(MYSQL_INCLUDE)
                        AC_SUBST(MYSQL_LIB)
                        AC_SUBST(MYSQL_BIN)
                        mysql_app=${MYSQL_BIN}/mysql
                        FOUND_MYSQL=yes
                    fi
                else
                    if ! test x${FOUND_MYSQL} = "xyes"; then
                        echo "no joy in /usr/mysql..."
                    fi
                fi
                if test -d "/usr/local/mysql"; then
                    echo "Found directory /usr/local/mysql"
                    echo "checking MySQL installation..."
                    mysql_dir=/usr/local/mysql
                    echo -n "checking headers..."
                    if test -d "${mysql_dir}/include"; then
                        MYSQL_INCLUDE="-I${mysql_dir}/include"
                        echo " ok"
                    else
                        echo " uh-oh"
                    fi
                    echo -n "checking libraries..."
                    if test -d "${mysql_dir}/lib"; then
                        MYSQL_LIB="-L${mysql_dir}/lib"
                        echo " ok"
                    else
                        echo " uh-oh"
                    fi
                    echo -n "checking binaries..."
                    if test -d "${mysql_dir}/bin"; then
                        MYSQL_BIN="${mysql_dir}/bin"
                        echo " ok"
                    else
                        echo " uh-oh"
                    fi
                    if test -f "${mysql_dir}/include/mysql.h"; then
                        MYSQL_HEADER="<mysql.h>"
                        AC_SUBST(MYSQL_HEADER)
                        AC_DEFINE(USE_MYSQL)
                        AC_SUBST(MYSQL_INCLUDE)
                        AC_SUBST(MYSQL_LIB)
                        AC_SUBST(MYSQL_BIN)
                        mysql_app=${MYSQL_BIN}/mysql
                        FOUND_MYSQL=yes
                    fi
                else
                    if ! test x${FOUND_MYSQL} = "xyes"; then
                        echo "no joy in /usr/local/mysql..."
                    fi
                fi
                if test -d "/var/mysql"; then
                    echo "Found directory /var/mysql"
                    echo "checking MySQL installation..."
                    mysql_dir=/var/mysql
                    echo -n "checking headers..."
                    if test -d "${mysql_dir}/include"; then
                        MYSQL_INCLUDE="-I${mysql_dir}/include"
                        echo " ok"
                    else
                        echo " uh-oh"
                    fi
                    echo -n "checking libraries..."
                    if test -d "${mysql_dir}/lib"; then
                        MYSQL_LIB="-L${mysql_dir}/lib"
                        echo " ok"
                    else
                        echo " uh-oh"
                    fi
                    echo -n "checking binaries..."
                    if test -d "${mysql_dir}/bin"; then
                        MYSQL_BIN="${mysql_dir}/bin"
                        echo " ok"
                    else
                        echo " uh-oh"
                    fi
                    if test -f "${mysql_dir}/include/mysql.h"; then
                        MYSQL_HEADER="<mysql.h>"
                        AC_SUBST(MYSQL_HEADER)
                        AC_DEFINE(USE_MYSQL)
                        AC_SUBST(MYSQL_INCLUDE)
                        AC_SUBST(MYSQL_LIB)
                        AC_SUBST(MYSQL_BIN)
                        mysql_app=${MYSQL_BIN}/mysql
                        FOUND_MYSQL=yes
                    fi
                else
                    if ! test x${FOUND_MYSQL} = "xyes"; then
                        echo "no joy in /var/mysql..."
                    fi
                fi


                if ! test x${FOUND_MYSQL} = "xyes"; then
                    dnl REALLY can't find MySQL anywhere!
                    echo
                    echo "ARGH: Unable to locate mysql! Take cover! Self destructing in 3 seconds!"
                    echo
                    echo "Please install the MySQL database system, which is available for free from"
                    echo "http://www.mysql.org/ and run this program again. If you do have MySQL in-"
                    echo "stalled, use the option --with-mysql=DIR so that $0 can find it."
                    echo
                    exit 1
                fi
dnl ##
dnl ##

            else
                echo
                echo "ARGH: Unable to locate mysql! Take cover! Self destructing in 3 seconds!"
                echo
                echo "Please install the MySQL database system, which is available for free from"
                echo "http://www.mysql.org/ and run this program again. If you do have MySQL in-"
                echo "stalled, use the option --with-mysql=DIR so that $0 can find it."
                echo
                exit 1
            fi
        else
            MYSQL_HEADER="<mysql/mysql.h>"
            AC_DEFINE(USE_MYSQL)
            AC_SUBST(MYSQL_HEADER)
            AC_CHECK_LIB(mysqlclient, mysql_connect)
        fi
    else
        MYSQL_HEADER="<mysql.h>"
        AC_DEFINE(USE_MYSQL)
        AC_SUBST(MYSQL_HEADER)
        AC_CHECK_LIB(mysqlclient, mysql_connect)
    fi
    mysql_app=mysql
    FOUND_MYSQL=yes
fi

dnl Additional MySQL options.
dnl

if test "x${with_sql_pass}" = "x"; then
    with_mysql_pass="NULL"
fi
MYSQL_SERVER=${with_sql_host}
MYSQL_USER=${with_sql_user}
MYSQL_PASSWORD=${with_sql_pass}
MYSQL_DATABASE=${with_sql_db}
MYSQL_SOCKET=${with_sql_sock}

dnl Echo to user.
dnl
echo "checking mysql server... ${with_sql_host}"
echo "checking mysql user... ${with_sql_user}"
echo "checking mysql password... ${with_sql_pass}"
echo "checking mysql database... ${with_sql_db}"
echo "checking mysql socket file... ${with_sql_sock}"

dnl Define properly.
dnl
AC_SUBST(MYSQL_SERVER)
AC_SUBST(MYSQL_USER)
AC_SUBST(MYSQL_PASS)
AC_SUBST(MYSQL_DATABASE)
AC_SUBST(MYSQL_SOCKET)

dnl Use icq gateway?
dnl
echo -n "checking whether to enable icq gateway..."
if test "x$with_icq" = "xyes"; then
  echo " yes"
  AC_DEFINE(USE_ICQ)
else
  echo "no"
fi

dnl Use message rating system?
dnl
echo -n "checking whether to enable ratings..."
if test "x$with_rating" = "xyes"; then
  echo " yes"
  AC_DEFINE(USE_RATING)
else
  echo " no"
fi

dnl Use superhero generator?
echo -n "checking superhero powers..."
if test "x$with_hero" = "xyes"; then
  AC_DEFINE(SUPERHERO)
  echo " found in /dev/he-man"
else
  echo " need more spinach (sorry)"
fi

dnl Check if the proc-animal patch is installed.
echo -n "checking for proc-animal kernel patch..."
if test -r /proc/sys/kernel/name; then
    echo " `${PROG_CAT} /proc/sys/kernel/name`"
    AC_DEFINE(HAVE_ANIMAL)
else
    echo " nope"
fi

dnl Define LINUX if this is a linux system.
if test "x$gawk_path" != "xno" ; then
  os=`echo $target_os | gawk -F'-' '{print $1}'`
  echo -n "checking for sysinfo() call..."
  if test "x$os" = "xlinux" ; then
    AC_DEFINE(LINUX)
    echo " yes"
  else
    echo " no"
  fi
else
  if test "x$awk_path" != "xno" ; then
    echo -n "checking for sysinfo() call..."
    os=`echo $target_os | awk -F'-' '{print $1}'`
    if test "x$os" = "xlinux" ; then
      AC_DEFINE(LINUX)
      echo " yes"
    else
      echo " no"
    fi
  fi
fi

AC_OUTPUT(cgi/Makefile lib/Makefile daemons/Makefile src/Makefile \
    misc/Makefile shix/Makefile icq/Makefile \
    share/Makefile share/feelings/Makefile \
    share/loginscreens/Makefile web/Makefile web/classes/Makefile \
    web/engine/Makefile web/pix/Makefile web/style/Makefile \
    web/script/Makefile web/sound/Makefile web/flash/Makefile \
    po/Makefile.in intl/Makefile include/Makefile Makefile build-defs.h)

dnl Create PHP include file with MYSQL settings.
dnl
PHP_CONFIG_FILE=web/config.inc
echo "creating $PHP_CONFIG_FILE"
echo "<?php" > $PHP_CONFIG_FILE
echo >> $PHP_CONFIG_FILE
echo "/* config.inc.  Generated automatically by configure.  */" >> $PHP_CONFIG_FILE
echo >> $PHP_CONFIG_FILE
echo "\$BBSNAME        = \"$with_name\"" >> $PHP_CONFIG_FILE
echo >> $PHP_CONFIG_FILE
echo "\$MYSQL_SERVER   = \"$MYSQL_SERVER\"" >> $PHP_CONFIG_FILE
echo "\$MYSQL_USER     = \"$MYSQL_USER\"" >> $PHP_CONFIG_FILE
echo "\$MYSQL_PASS     = \"$MYSQL_PASS\"" >> $PHP_CONFIG_FILE
echo "\$MYSQL_DATABASE = \"$MYSQL_DATABASE\"" >> $PHP_CONFIG_FILE
echo >> $PHP_CONFIG_FILE
echo "?>" >> $PHP_CONFIG_FILE

dnl Only do this if we're not called from the makefile.
dnl
if test "$no_create" != "yes" ; then


  dnl Update or create version stamp, but only if it' not automagically running.
  /bin/sh ./mkversion-sh

  dnl Linux newbie stuff.
  dnl
  if test "x$with_overview" = "xyes"; then
    dnl Give users a quick overview.
    echo
    echo -n "Please hit return to continue..."
    read ans
    clear
    
    echo "----------------------------------------------------------------------"
    echo "       You have set up $with_name BBS with the following features:"
    echo "----------------------------------------------------------------------"
    echo
    echo "  * MySQL is installed and will be used as follows:"
    echo
    echo "    The BBS will connect to database \"${with_sql_db}\" on server ${with_sql_host}"
    echo "    as user ${with_sql_user} and password ${with_sql_pass} using ${with_sql_sock}"
    echo
    if test "x$with_rating" = "xyes"; then
      echo "  * Rating system is enabled."
    else
      echo "  * Rating system is disabled."
    fi
    if test "x$with_hero" = "xyes"; then
      echo "  * Superheroes can be generated."
    else
      echo "  * Superheroes can not be generated."
    fi
    if test "x$os" = "xlinux" ; then
      echo "  * Extended system info is available."
    else
      echo "  * Extended system info is not available."
    fi
  fi
  echo
  if test "x$with_overview" = "xno"; then
    echo "----------------------------------------------------------------------"
  fi
  echo "Just run make and sit back whilst $with_name BBS is compiled."
  echo "After compilation is finished, refer to the README file for details"
  echo "on how to install the BBS on your machine. Note that you will need"
  echo "root access to do this."
  echo "----------------------------------------------------------------------"
  echo
fi

